# project_blog_django

./: pyproject.toml
mysite/: mysite_data.json
mysite/blog/: feeds.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
mysite/blog/static/css/: blog.css
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
mysite/blog/templatetags/: blog_tags.py
mysite/mysite/: .sample_env  settings.py  urls.py
